--- a/partials/cds/2004.html
+++ b/partials/cds/2004.html
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/1.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/1.jpg" width="80" height="80" alt="track" />
             <h3>#1 All These Things That I Have Done</h3>
             <h4>The Killers</h4>
             <p>Taken from the album 'Hot Fuss'.</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/7.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/7.jpg" width="80" height="80" alt="track" />
             <h3>#7 Dreaming</h3>
             <h4>Dizzee Rascal</h4>
             <p>Taken from the album Showtime'.</p>
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/2.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/2.jpg" width="80" height="80" alt="track" />
             <h3>#2 What Became Of The Likely Lads</h3>
             <h4>The Libertines</h4>
             <p>Taken from the album 'The Libertines'.</p>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/8.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/8.jpg" width="80" height="80" alt="track" />
             <h3>#8 Confusion</h3>
             <h4>The Zutons</h4>
             <p>Taken from the album 'Who Killed...... The Zutons?'.</p>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/3.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/3.jpg" width="80" height="80" alt="track" />
             <h3>#3 Gravity</h3>
             <h4>Embrace</h4>
             <p>Taken from the album 'Out Of Nothing'.</p>
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/9.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/9.jpg" width="80" height="80" alt="track" />
             <h3>#9 Into The Fire</h3>
             <h4>Thirteen Senses</h4>
             <p>Taken from the album 'The Invitation'.</p>
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/4.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/4.jpg" width="80" height="80" alt="track" />
             <h3>#4 Take Me Out</h3>
             <h4>Franz Ferdinand</h4>
             <p>Taken from the album 'Franz Ferdinand'.</p>
@@ -66,7 +66,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/10.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/10.jpg" width="80" height="80" alt="track" />
             <h3>#10 Stumble And Fall</h3>
             <h4>Razorlight</h4>
             <p>Taken from the album 'Up All Night'.</p>
@@ -77,7 +77,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/5.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/5.jpg" width="80" height="80" alt="track" />
             <h3>#5 The Bucket</h3>
             <h4>Kings Of Leon</h4>
             <p>Taken from the album 'Aha Shake Heartbreak'.</p>
@@ -85,7 +85,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/11.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/11.jpg" width="80" height="80" alt="track" />
             <h3>#11 Not For All The Love In The World</h3>
             <h4>The Thrills</h4>
             <p>Taken from the album 'Let's Bottle Bohemia'.</p>
@@ -96,7 +96,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/6.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/6.jpg" width="80" height="80" alt="track" />
             <h3>#6 This One's For You</h3>
             <h4>Ed Harcourt</h4>
             <p>Taken from the album 'Strangers'.</p>
@@ -104,7 +104,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2004/12.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2004/12.jpg" width="80" height="80" alt="track" />
             <h3>#12 Dry Your Eyes</h3>
             <h4>The Streets</h4>
             <p>Taken from the album 'A Grand Don't Come For Free'.</p>
