--- a/partials/cds/2008.html
+++ b/partials/cds/2008.html
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/1.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/1.jpg" width="80" height="80" alt="track" />
             <h3>#1 Not Gonna Teach Your Boyfriend How To Dance</h3>
             <h4>Black Kids</h4>
             <p>Taken from the album 'Partie Traumatic'.</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/6.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/6.jpg" width="80" height="80" alt="track" />
             <h3>#6 Shape Of My Heart</h3>
             <h4>Noah And The Whale</h4>
             <p>Taken from the album 'Peaceful, The World Lays Me Down'.</p>
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/2.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/2.jpg" width="80" height="80" alt="track" />
             <h3>#2 Two Doors Down</h3>
             <h4>Mystery Jets</h4>
             <p>Taken from the album 'Twenty One'.</p>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/7.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/7.jpg" width="80" height="80" alt="track" />
             <h3>#7 Roll The Dice</h3>
             <h4>Sarah Schiralli</h4>
             <p>Taken from the album 'Sarah Schiralli'.</p>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/3.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/3.jpg" width="80" height="80" alt="track" />
             <h3>#3 Diana</h3>
             <h4>Operahouse</h4>
             <p>Taken from the album 'Operahouse'.</p>
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/8.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/8.jpg" width="80" height="80" alt="track" />
             <h3>#8 Golden Age</h3>
             <h4>TV On The Radio</h4>
             <p>Taken from the album 'Dear Science'.</p>
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/4.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/4.jpg" width="80" height="80" alt="track" />
             <h3>#4 A-Punk</h3>
             <h4>Vampire Weekend</h4>
             <p>Taken from the album 'Vampire Weekend'.</p>
@@ -66,7 +66,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/9.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/9.jpg" width="80" height="80" alt="track" />
             <h3>#9 L.E.S Artists</h3>
             <h4>Santagold</h4>
             <p>Taken from the album 'Santagold'.</p>
@@ -77,7 +77,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/5.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/5.jpg" width="80" height="80" alt="track" />
             <h3>#5 Sex Is On Fire</h3>
             <h4>Kings Of Leon</h4>
             <p>Taken from the album 'Only by the night'.</p>
@@ -85,7 +85,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2008/10.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2008/10.jpg" width="80" height="80" alt="track" />
             <h3>#10 Time To Pretent</h3>
             <h4>MGMT</h4>
             <p>Taken from the album 'Oracular Spectacular'.</p>
