--- a/partials/cds/2011.html
+++ b/partials/cds/2011.html
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/1.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/1.jpg" width="80" height="80" alt="track" />
             <h3>#1 L.I.F.E.G.O.E.S.O.N.</h3>
             <h4>Noah And The Whale</h4>
             <p>Taken from the album 'Last Days On Earth'.</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/6.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/6.jpg" width="80" height="80" alt="track" />
             <h3>#6 Give Me My Month</h3>
             <h4>James Blake</h4>
             <p>Taken from the album 'James Blake'.</p>
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/2.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/2.jpg" width="80" height="80" alt="track" />
             <h3>#2 Inhaler</h3>
             <h4>Miles Kane</h4>
             <p>Taken from the album 'Colour Of The Trap'.</p>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/7.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/7.jpg" width="80" height="80" alt="track" />
             <h3>#7 Baby Says</h3>
             <h4>The Kills</h4>
             <p>Taken from the album 'Blood Pressures'.</p>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/3.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/3.jpg" width="80" height="80" alt="track" />
             <h3>#3 Hawaiian Air</h3>
             <h4>Friendly Fires</h4>
             <p>Taken from the album 'Pala'.</p>
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/8.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/8.jpg" width="80" height="80" alt="track" />
             <h3>#8 Video Games</h3>
             <h4>Lana Del Ray</h4>
             <p>Taken from the album 'Born To Die'.</p>
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/4.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/4.jpg" width="80" height="80" alt="track" />
             <h3>#4 Pumped Up Kicks</h3>
             <h4>Friendly Fires</h4>
             <p>Taken from the album 'Torches'.</p>
@@ -66,7 +66,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/9.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/9.jpg" width="80" height="80" alt="track" />
             <h3>#9 That's Where You're Wrong</h3>
             <h4>Arctic Monkeys</h4>
             <p>Taken from the album 'Suck It And See'.</p>
@@ -77,7 +77,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/5.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/5.jpg" width="80" height="80" alt="track" />
             <h3>#5 Still Life</h3>
             <h4>The Horrors</h4>
             <p>Taken from the album 'Skying'.</p>
@@ -85,7 +85,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2011/10.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2011/10.jpg" width="80" height="80" alt="track" />
             <h3>#10 Lippy Kids</h3>
             <h4>Elbow</h4>
             <p>Taken from the album 'Build A Rocket Boys!'.</p>
