--- a/partials/cds/2012.html
+++ b/partials/cds/2012.html
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/1.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/1.jpg" width="80" height="80" alt="track" />
             <h3>#1 Hail Bop</h3>
             <h4>Django Django</h4>
             <p>Taken from the album 'Django Django'.</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/6.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/6.jpg" width="80" height="80" alt="track" />
             <h3>#6 Feels Like We Only Go Backwards</h3>
             <h4>Tame Impala</h4>
             <p>Taken from the album 'Lonerism'.</p>
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/2.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/2.jpg" width="80" height="80" alt="track" />
             <h3>#2 Pythagorean Fearem</h3>
             <h4>Howler</h4>
             <p>Taken from the album 'America Give Up'.</p>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/7.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/7.jpg" width="80" height="80" alt="track" />
             <h3>#7 Ho Hey</h3>
             <h4>The Lumineers</h4>
             <p>Taken from the album 'The Lumineers'.</p>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/3.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/3.jpg" width="80" height="80" alt="track" />
             <h3>#3 Two Hours</h3>
             <h4>Theme Park</h4>
             <p>Taken from the album 'Theme Park'.</p>
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/8.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/8.jpg" width="80" height="80" alt="track" />
             <h3>#8 I'm Getting Ready</h3>
             <h4>Michael Kiwanuka</h4>
             <p>Taken from the album 'Home Again'.</p>
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/4.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/4.jpg" width="80" height="80" alt="track" />
             <h3>#4 Dead Film Star</h3>
             <h4>Team Ghost</h4>
             <p>Taken from the album 'Team Ghost'.</p>
@@ -66,7 +66,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/9.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/9.jpg" width="80" height="80" alt="track" />
             <h3>#9 Where Do The Blue Birds Fly</h3>
             <h4>The Tallest Man On Earth</h4>
             <p>Taken from the album 'Shallow Grave'.</p>
@@ -77,7 +77,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/5.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/5.jpg" width="80" height="80" alt="track" />
             <h3>#5 Trouble Town</h3>
             <h4>Jake Bugg</h4>
             <p>Taken from the album 'Jake Bugg'.</p>
@@ -85,7 +85,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2012/10.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2012/10.jpg" width="80" height="80" alt="track" />
             <h3>#10 Laura</h3>
             <h4>Bate For Lashes</h4>
             <p>Taken from the album 'The Haunted Man'.</p>
