--- a/partials/cds/2013.html
+++ b/partials/cds/2013.html
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/1.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/1.jpg" width="80" height="80" alt="track" />
             <h3>#1 Fragment Two</h3>
             <h4>These New Puritans</h4>
             <p>Taken from the album 'Field Of Reeds'.</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/6.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/6.jpg" width="80" height="80" alt="track" />
             <h3>#6 Eliza</h3>
             <h4>Anna Calvi</h4>
             <p>Taken from the album 'One Breath'.</p>
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/2.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/2.jpg" width="80" height="80" alt="track" />
             <h3>#2 Strong</h3>
             <h4>London Grammer</h4>
             <p>Taken from the album 'If You Wait'.</p>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/7.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/7.jpg" width="80" height="80" alt="track" />
             <h3>#7 Easy Easy</h3>
             <h4>King Krule</h4>
             <p>Taken from the album '6 Feet Beneath The Moon'.</p>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/3.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/3.jpg" width="80" height="80" alt="track" />
             <h3>#3 Adam</h3>
             <h4>New Desert Blues</h4>
             <p>Taken from the e.p 'Adam'.</p>
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/8.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/8.jpg" width="80" height="80" alt="track" />
             <h3>#8 GMF</h3>
             <h4>John Grant</h4>
             <p>Taken from the album 'Pale Green Ghosts'.</p>
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/4.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/4.jpg" width="80" height="80" alt="track" />
             <h3>#4 Riptide</h3>
             <h4>Vance Joy</h4>
             <p>Taken from the album 'Riptide'.</p>
@@ -66,7 +66,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/9.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/9.jpg" width="80" height="80" alt="track" />
             <h3>#9 Cruel City</h3>
             <h4>Augustines</h4>
             <p>Taken from the album 'Augustines'.</p>
@@ -77,7 +77,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/5.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/5.jpg" width="80" height="80" alt="track" />
             <h3>#5 Single Cheep</h3>
             <h4>King Creosote</h4>
             <p>Taken from the album 'That Might Well Be It, Darling'.</p>
@@ -85,7 +85,7 @@
     </div>
     <div class="col-md-6">
         <div class="track">
-            <img src="images/tracks/2013/10.jpg" width="80" height="80" alt="track" />
+            <img src="../images/tracks/2013/10.jpg" width="80" height="80" alt="track" />
             <h3>#10 Nothing Arrived</h3>
             <h4>Villagers</h4>
             <p>Taken from the album '{Awayland}'.</p>
