--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,7 @@
-﻿<div class="page">
-    <h2 class="margin-bottom-30">Latest projects</h2>
-    <div class="row">
+﻿<div class="page"> 
+
+    <div class="row row-top">
+        <h2 class="margin-bottom-30">Latest projects</h2>
         <div class="col-md-6">
             <div class="project">
                 <div class="row">
@@ -32,9 +33,9 @@
     </div>
 
     <div class="paper">
-        <div class="row">
+        <div class="row row-middle">
             <div class="col-md-7">
-                <h2 class="margin-bottom-15 overflow">GDCD <a class="read pull-right margin-top-10" href="#gdcd">view</a></h2>
+                <h2 class="margin-bottom-15 overflow">GDCD <a class="read pull-right margin-top-10" href="#/gdcd/2013">view</a></h2>
                 <div class="gdcd"></div>
             </div>
             <div class="col-md-5">
@@ -91,12 +92,12 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-6 about">
+    <div class="row row-bottom">
+        <div class="col-md-6">
             <h2>About</h2>
             <h4 class="margin-bottom-15">Web development plus stuff.</h4>
-            <p>Hi, my name is Greg Duncan and I’m a software developer from Portsmouth, UK. I have been working in application development for over 7 years, and have experience with a number of technologies listed above right.</p>
-            <p>Please feel free to contact me regarding any aspect of this site; it would be great to hear from you!</p>
+            <p class="p-default">Hi, my name is Greg Duncan and I’m a software developer from Portsmouth, UK. I have been working in application development for over 7 years, and have experience with a number of technologies listed above right.</p>
+            <p class="p-default">Please feel free to contact me regarding any aspect of this site; it would be great to hear from you!</p>
         </div>
         <div class="col-md-6">
             <h2 class="margin-bottom-15">Where's Greg?</h2>
