--- a/css/site.less
+++ b/css/site.less
@@ -1,8 +1,8 @@
 ﻿/*
 
-    Created on : 2013-12-18
+    Created on : 2014-04-26
     Author : Greg Duncan
-    Description: Stylesheet for front-end website.
+    Description: Stylesheet front-end web app.
 
     0. Less
     1. Resets
@@ -10,33 +10,36 @@
     3. Header Nav
     4. Masthead
     5. Sidebar
-    6. Content
+    6. Projects
+    7. GDCD
+    8. Skills
 
 **/
 
 /* 0. Less */
 @bodyimage: url(../images/bg.png);
 @brown: #5F5050;
-@light-brown:#776D6D;
+@light-brown: #776D6D;
 @white: #fff;
 @grey: #333;
 @light-grey: #999;
-@orange:#FFA500;
+@orange: #FFA500;
 @heading-font: 'Archivo Black', sans-serif;
 @standard-font: 'Open Sans', sans-serif;
 @georgia-font: Georgia;
-.default-para(){
-    font-size:14px;
-    margin-bottom:15px;
-    font-family:@georgia-font;
+
+.default-para() {
+    font-size: 14px;
+    margin-bottom: 15px;
+    font-family: @georgia-font;
 }
 
 /* 1. Resets */
-a, abbr, acronym, address, applet, article, aside, audio, b, blockquote, big, body, center, canvas, caption, cite, code, command, datalist, dd, del, details, dfn, dl, div, dt, em, embed, fieldset, figcaption, figure, font, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, keygen, label, legend, li, meter, nav, object, ol, output, p, pre, progress, q, s, samp, section, small, span, source, strike, strong, sub, sup, table, tbody, tfoot, thead, th, tr, td, video, tt, u, ul, var {
+a, abbr, acronym, address, article, aside, audio, b, blockquote, body, center, canvas, caption, cite, code, command, datalist, dd, del, details, dfn, dl, div, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, keygen, label, legend, li, meter, nav, object, ol, output, p, pre, progress, q, s, samp, section, small, span, source, strong, sub, sup, table, tbody, tfoot, thead, th, tr, td, video, u, ul, var {
     margin: 0;
     padding: 0;
     outline: 0;
-    border: 0 none;
+    border: none;
     background: transparent;
     vertical-align: top;
     font-size: 100%;
@@ -72,9 +75,8 @@ a {
     cursor: pointer;
 }
 
-iframe
-{
-    border:1px solid @brown;
+iframe {
+    border: 1px solid @brown;
 }
 
 /* 2. Globals */
@@ -83,13 +85,40 @@ h1, h2, h3, h4 {
     color: @brown;
 }
 
+.overflow {
+    overflow: hidden;
+}
+
+.margin-bottom-15 {
+    margin-bottom: 15px;
+}
+
+.margin-bottom-30 {
+    margin-bottom: 30px;
+}
+
+.margin-top-10 {
+    margin-top: 10px;
+}
+
+.btn-default {
+    background-color: @brown;
+    border-color: @brown;
+    color: @white;
+}
+
+    .btn-default:hover {
+        background-color: @light-brown;
+        border-color: @light-brown;
+        color: @white;
+    }
+.p-default{
+    .default-para
+}
+
 body {
     background: @bodyimage;
     font-family: @standard-font;
-}
-
-.overflow {
-    overflow: hidden;
 }
 
 .container {
@@ -98,95 +127,23 @@ body {
     margin: 0 auto;
 }
 
-.margin-bottom-5
-{
-    margin-bottom:5px;
+.content {
+    padding-right: 0;
+    padding-left: 0;
 }
 
-.margin-bottom-10
-{
-    margin-bottom:10px;
+.content-inner {
+    min-height: 700px;
+    padding-bottom: 50px;
 }
 
-.margin-bottom-15
-{
-    margin-bottom:15px;
+.page {
+    padding-top: 20px;
 }
 
-.margin-bottom-20
-{
-    margin-bottom:20px;
-}
-
-.margin-bottom-30
-{
-    margin-bottom:30px;
-}
-
-.margin-top-5
-{
-    margin-top:5px;
-}
-
-.margin-top-10
-{
-    margin-top:10px;
-}
-
-.margin-top-15
-{
-    margin-top:15px;
-}
-
-.margin-top-20
-{
-    margin-top:20px;
-}
-
-.margin-top-30
-{
-    margin-top:30px;
-}
-
-.padding-bottom-5
-{
-    padding-bottom:5px;
-}
-
-.padding-bottom-10
-{
-    padding-bottom:10px;
-}
-
-.padding-bottom-15
-{
-    padding-bottom:15px;
-}
-
-.padding-bottom-20
-{
-    padding-bottom:20px;
-}
-
-.padding-bottom-30
-{
-    padding-bottom:30px;
-}
-
-.btn-default
-{
-    background-color: @brown;
-    border-color:@brown;
-    color: @white;
-}
-
-.btn-default:hover
-{
-    background-color:@light-brown;
-    border-color:@light-brown;
-    color: @white;
-}
-
+    .page h2 {
+        font-size: 30px;
+    }
 /* 3. Header Nav */
 .navbar {
     position: absolute;
@@ -195,35 +152,30 @@ body {
     font-family: @heading-font;
 }
 
-.navbar .nav > li {
-    float: left;
-}
+    .navbar .nav > li {
+        float: left;
+    }
 
-.navbar .nav > li > a {
-    display: block;
-    padding: 10px 20px;
-    color: @brown;
-    font-size: 18px;
-}
+        .navbar .nav > li > a {
+            display: block;
+            padding: 10px 20px;
+            color: @brown;
+            font-size: 18px;
+        }
 
-.navbar .nav > li > a.active {
-    background: @brown;
-    color: @white;
-    -webkit-text-shadow: none;
-    text-shadow: none;
-}
+            .navbar .nav > li > a.active {
+                background: @brown;
+                color: @white;
+                -webkit-text-shadow: none;
+                text-shadow: none;
+            }
 
-.navbar .nav > li > a:hover {
-    background: @brown;
-    color: @white;
-    -webkit-text-shadow: none;
-    text-shadow: none;
-}
-
-.content {
-    padding-right: 0;
-    padding-left: 0;
-}
+            .navbar .nav > li > a:hover {
+                background: @brown;
+                color: @white;
+                -webkit-text-shadow: none;
+                text-shadow: none;
+            }
 
 /* 4. Masthead */
 .masthead {
@@ -232,46 +184,46 @@ body {
     background: url(../images/header.png) repeat-x bottom;
 }
 
-.masthead:before {
-    position: relative;
-    left: -60px;
-    display: inline-block;
-    float: left;
-    width: 60px;
-    height: 295px;
-    background: url(../images/header-left.png) no-repeat bottom;
-    content: "";
-}
+    .masthead:before {
+        position: relative;
+        left: -60px;
+        display: inline-block;
+        float: left;
+        width: 60px;
+        height: 295px;
+        background: url(../images/header-left.png) no-repeat bottom;
+        content: "";
+    }
 
-.masthead:after {
-    display: inline-block;
-    float: right;
-    width: 600px;
-    height: 295px;
-    background: url(../images/header-right-new-new.png) no-repeat bottom;
-    content: "";
-}
+    .masthead:after {
+        display: inline-block;
+        float: right;
+        width: 600px;
+        height: 295px;
+        background: url(../images/header-right-new-new.png) no-repeat bottom;
+        content: "";
+    }
 
-.masthead > a {
-    position: relative;
-    top: 68px;
-    right: 40px;
-    display: inline-block;
-    width: 340px;
-    height: 140px;
-    background: url(../images/logo.png) no-repeat;
-}
+    .masthead > a {
+        position: relative;
+        top: 68px;
+        right: 40px;
+        display: inline-block;
+        width: 340px;
+        height: 140px;
+        background: url(../images/logo.png) no-repeat;
+    }
 
-.masthead > a:after {
-    position: relative;
-    top: 150px;
-    display: inline-block;
-    color: @brown;
-    content: "u.i developer / programmer";
-    text-transform: uppercase;
-    font-size: 18px;
-    font-family: @heading-font;
-}
+        .masthead > a:after {
+            position: relative;
+            top: 150px;
+            display: inline-block;
+            color: @brown;
+            content: "u.i developer / programmer";
+            text-transform: uppercase;
+            font-size: 18px;
+            font-family: @heading-font;
+        }
 
 /* 5. Sidebar */
 .sidebar {
@@ -280,200 +232,171 @@ body {
     min-height: 240px;
     background: url(../images/rhs.png) no-repeat;
     float: right;
+    margin-bottom:50px;
 }
 
-.sidebar:after {
-    position: relative;
-    right: 30px;
-    display: block;
-    width: 300px;
-    height: 40px;
-    background: url(../images/rhs-bottom.png) no-repeat bottom;
-    content: "";
-}
+    .sidebar:after {
+        position: relative;
+        right: 30px;
+        display: block;
+        width: 300px;
+        height: 40px;
+        background: url(../images/rhs-bottom.png) no-repeat bottom;
+        content: "";
+    }
 
-.sidebar h2 {
-    color: @white;
-    font-size: 18px;
-    line-height: 25px;
-}
+    .sidebar h2 {
+        color: @white;
+        font-size: 18px;
+        line-height: 25px;
+    }
 
-.sidebar h3 {
-    margin: 40px 0 10px 0;
-    color: @white;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-family: @heading-font;
-    line-height: 25px;
-}
+    .sidebar h3 {
+        margin: 40px 0 10px 0;
+        color: @white;
+        text-transform: uppercase;
+        font-size: 18px;
+        font-family: @heading-font;
+        line-height: 25px;
+    }
 
-.sidebar ul > li {
-    margin-bottom: 15px;
-}
+    .sidebar p {
+        color:#fff;
+    }
 
-.sidebar input[type="text"] {
-    padding: 8px 0;
-    width: 230px;
-    border: 3px solid @brown;
-    border-radius: 3px;
-    color: @brown;
-    text-indent: 5px;
-    font-family: @standard-font;
-    font-size:13px;
-}
+    .sidebar ul > li {
+        margin-bottom: 15px;
+    }
 
-.sidebar textarea {
-    padding: 8px 0;
-    width: 230px;
-    height: 120px;
-    border: 3px solid @brown;
-    border-radius: 3px;
-    color: @brown;
-    text-indent: 5px;
-    font-size: 13px;
-    font-family: @standard-font;
-}
+    .sidebar input[type="text"] {
+        width: 230px;
+        border: 3px solid @brown;
+        border-radius: 3px;
+        color: @brown;
+        font-family: @standard-font;
+        font-size: 13px;
+    }
 
-.sidebar .recommends {
-    width: 224px;
-    height: 224px;
-    border: 3px solid @brown;
-    background: url(../images/recommends.png) no-repeat bottom;
-}
+    .sidebar textarea {
+        width: 230px;
+        height: 120px;
+        border: 3px solid @brown;
+        border-radius: 3px;
+        color: @brown;
+        font-size: 13px;
+        font-family: @standard-font;
+    }
 
-.sidebar .recommends > a {
-    display: block;
-    width: 224px;
-    height: 180px;
-}
+    .sidebar .recommends {
+        width: 224px;
+        height: 224px;
+        border: 3px solid @brown;
+        background: url(../images/recommends.png) no-repeat bottom;
+    }
 
-.sidebar .recommends > a:hover {
-    background: #000;
-    opacity: 0.3;
-}
+        .sidebar .recommends > a {
+            display: block;
+            width: 224px;
+            height: 180px;
+        }
 
-/* 6. Content */
-.content-inner 
-{
-    min-height: 700px;
-    padding-bottom: 50px;
-}
-
-.page
-{
-    padding-top:20px;
-}
-
-.page h2
-{
-    font-size:30px;
-}
-
-/* 7. Projects */
+            .sidebar .recommends > a:hover {
+                background: #000;
+                opacity: 0.3;
+            }
+/* 6. Projects */
 .project {
     color: @brown;
-    font-family:@georgia-font;
-    margin-bottom:60px;
-}
-
-.project a {
-    color: @brown;
-}
-
-.project p {
-    color: #333;
-    font-size:14px;
-    margin-bottom:5px;
-}
-
-.project.full p {
-    font-size:12px;
-    font-family:@standard-font;
-    line-height:18px;
-}
-
-.project.full .external
-{
-    color: @brown;
-    font-size: 14px;
     font-family: @georgia-font;
-    font-style:italic;
-    font-weight:bold;
-    text-decoration:underline;
+    margin-bottom: 60px;
 }
 
-.project.full .external:hover
-{
-    text-decoration:none;
-}
+    .project a {
+        color: @brown;
+    }
 
-.project h3 {
-    margin-bottom: 5px;
-    color: @brown;
-    font-size: 16px;
-    font-family: @georgia-font;
-    font-style:italic;
-    font-weight:bold;
-}
+    .project p {
+        color: #333;
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .project.full p {
+        font-size: 12px;
+        font-family: @standard-font;
+        line-height: 18px;
+    }
+
+    .project.full .external {
+        color: @brown;
+        font-size: 14px;
+        font-family: @georgia-font;
+        font-style: italic;
+        font-weight: bold;
+        text-decoration: underline;
+    }
+
+        .project.full .external:hover {
+            text-decoration: none;
+        }
+
+    .project h3 {
+        margin-bottom: 5px;
+        color: @brown;
+        font-size: 16px;
+        font-family: @georgia-font;
+        font-style: italic;
+        font-weight: bold;
+    }
 
 .project-image {
     float: left;
-    margin:0 15px 0 5px;
+    margin: 0 15px 0 5px;
     width: 147px;
     height: 130px;
-    background-image: url(/images/projects/sprite.png); 
+    background-image: url(/images/projects/sprite.png);
     -webkit-box-shadow: 1px 2px 7px #333;
     box-shadow: 1px 2px 7px #333;
 }
 
-.project-managemmychain
-{
-    background-position:0 -130px;
+.project-managemmychain {
+    background-position: 0 -130px;
 }
 
-.project-portchesterbiz
-{
-    background-position:0 -260px;
+.project-portchesterbiz {
+    background-position: 0 -260px;
 }
 
-.project-partybelles
-{
-    background-position:0 -390px;
+.project-partybelles {
+    background-position: 0 -390px;
 }
 
-.project-moneybox
-{
-    background-position:0 -520px;
+.project-moneybox {
+    background-position: 0 -520px;
 }
 
-.project-ethnicraft
-{
-    background-position:0 -650px;
+.project-ethnicraft {
+    background-position: 0 -650px;
 }
 
-.project-aqua
-{
-    background-position:0 -780px;
+.project-aqua {
+    background-position: 0 -780px;
 }
 
-.project-easyoffice
-{
-    background-position:0 -910px;
+.project-easyoffice {
+    background-position: 0 -910px;
 }
 
-.project-grc
-{
-    background-position:0 -1050px;
+.project-grc {
+    background-position: 0 -1050px;
 }
 
-.project-segmantics
-{
-    background-position:0 -1170px;
+.project-segmantics {
+    background-position: 0 -1170px;
 }
 
-.project-instant
-{
-    background-position:0 -1300px;
+.project-instant {
+    background-position: 0 -1300px;
 }
 
 .project-description {
@@ -488,36 +411,35 @@ a.read {
     font-size: 12px;
     padding: 2px 10px;
     text-transform: capitalize;
-    color:@brown;
+    color: @brown;
     font-family: @georgia-font;
 }
 
-a.read:hover {
-    background: #CBC9C1;
-    text-decoration:none;
-}
+    a.read:hover {
+        background: #CBC9C1;
+        text-decoration: none;
+    }
 
-.paper
-{
-    height:300px;
+.paper {
+    height: 300px;
     background: url(/images/home-middle.png) repeat-x top;
-    margin:0 5px 50px 5px;
-    padding:15px;
+    margin: 0 5px 50px 5px;
+    padding: 15px;
 }
 
-.paper:after {
-    position: relative;
-    left:100%;
-    top: -270px;
-    display: block;
-    width: 27px;
-    height: 328px;
-    background-image: url(/images/home-middle-tape.png);
-    content: "";
-}
+    .paper:after {
+        position: relative;
+        left: 100%;
+        top: -270px;
+        display: block;
+        width: 27px;
+        height: 328px;
+        background-image: url(/images/home-middle-tape.png);
+        content: "";
+    }
 
-.gdcd:before 
-{
+/* 7. GDCD */
+.gdcd:before {
     position: relative;
     right: 25px;
     top: -75px;
@@ -528,134 +450,112 @@ a.read:hover {
     content: "";
 }
 
-.paper .gdcd
-{
-    width:468px;
-    height:198px;
+.paper .gdcd {
+    width: 468px;
+    height: 198px;
     background: #ffffff url(/images/gdcd.png) no-repeat center center;
 }
 
-.paper .tech
-{
-    width:300px;
-    height:198px;
+.paper .tech {
+    width: 300px;
+    height: 198px;
     background: #ffffff;
-    padding:15px;
+    padding: 15px;
     color: #444348;
     font-family: @georgia-font;
     font-size: 20px;
 }
 
-.paper .tech .row
-{
-    padding:3px 0;
+    .paper .tech .row {
+        padding: 3px 0;
+    }
+
+    .paper .tech span {
+        color: #999999;
+    }
+
+.cd-listing p {
+    .default-para
 }
 
-.paper .tech span
-{
-    color:#999999;
-}
-
-.skills
-{
-
-}
-
-.skills h4
-{
-    color: @grey;
-    font-family:  @georgia-font;
+.cd-listing ul {
+    overflow: hidden;
     font-size: 16px;
-    font-style: italic;
-    padding-bottom: 5px;
-    font-weight:bold;
-}
-
-.skills ul
-{
     color: @brown;
+    font-style: italic;
+    font-weight: bold;
     font-family: @georgia-font;
-    font-size: 13px;
-    margin-bottom:15px;
+    margin-bottom: 30px;
 }
 
-.about p
-{
-    .default-para
+    .cd-listing ul li {
+        float: left;
+        margin-right: 15px;
+    }
+
+        .cd-listing ul li a {
+            color: @brown;
+            text-decoration: underline;
+        }
+
+            .cd-listing ul li a.active {
+                color: @orange;
+            }
+
+            .cd-listing ul li a:hover {
+                text-decoration: none;
+            }
+
+.track {
+    overflow: hidden;
+    font-family: @georgia-font;
+    margin-bottom: 30px;
 }
 
-.cd-listing p
-{
-    .default-para
-}
+    .track > img {
+        float: left;
+        margin-right: 10px;
+    }
 
-.cd-listing ul
-{
-    overflow:hidden;
-    font-size:16px;
-    color:@brown;
-    font-style:italic;
-    font-weight:bold;
-    font-family:@georgia-font;
-    margin-bottom:30px;
-}
+    .track > h3 {
+        font-family: @georgia-font;
+        font-size: 14px;
+        font-style: italic;
+        font-weight: bold;
+        text-transform: capitalize;
+        margin-bottom: 10px;
+    }
 
-.cd-listing ul li
-{
-    float:left;
-    margin-right:15px;
-}
+    .track > h4 {
+        font-family: @georgia-font;
+        font-size: 12px;
+        font-weight: bold;
+        text-transform: capitalize;
+        margin-bottom: 5px;
+    }
 
-.cd-listing ul li a
-{
-    color:@brown;
-    text-decoration:underline;
-}
+    .track > p {
+        font-family: @georgia-font;
+        font-size: 12px;
+    }
 
-.cd-listing ul li a.active
-{
-    color:@orange;
+/* 8. Skills */
+.skills {
 }
+    .skills h4 {
+        color: @grey;
+        font-family: @georgia-font;
+        font-size: 16px;
+        font-style: italic;
+        padding-bottom: 5px;
+        font-weight: bold;
+    }
 
-.cd-listing ul li a:hover 
-{
-    text-decoration:none;
-}
+    .skills ul {
+        color: @brown;
+        font-family: @georgia-font;
+        font-size: 13px;
+        margin-bottom: 15px;
+    }
 
-.track
-{
-    overflow:hidden;
-    font-family:@georgia-font;
-    margin-bottom:30px;
-}
-
-.track > img
-{
-    float:left;
-    margin-right:10px;
-}
-
-.track > h3
-{
-    font-family:@georgia-font;
-    font-size:14px;
-    font-style:italic;
-    font-weight:bold;
-    text-transform:capitalize;
-    margin-bottom:10px;
-}
-
-.track > h4
-{
-    font-family:@georgia-font;
-    font-size:12px;
-    font-weight:bold;
-    text-transform:capitalize;
-    margin-bottom:5px;
-}
-
-.track > p
-{
-    font-family:@georgia-font;
-    font-size:12px;
-}
+ 
