Added Spotify link to GDCD pages

--- a/partials/cds/2011.html
+++ b/partials/cds/2011.html
@@ -92,3 +92,9 @@
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <a href="http://open.spotify.com/user/gregduncan/playlist/1VKQ2axFl8duTtWuCCwhI4" target="_blank" class="spotify" title="Open in Spotify"></a>
+    </div>
+</div>
