--- a/css/site.css
+++ b/css/site.css
@@ -528,6 +528,15 @@ a.read:hover {
   font-family: Georgia;
   font-size: 12px;
 }
+.spotify {
+  width: 72px;
+  height: 72px;
+  background: url(../images/spotify.png) no-repeat center center;
+  display: inline-block;
+}
+.spotify:hover {
+  opacity: 0.8;
+}
 /* 8. Skills */
 .skills h4 {
   color: #333333;
