--- a/css/site.less
+++ b/css/site.less
@@ -539,6 +539,16 @@ a.read {
         font-size: 12px;
     }
 
+.spotify{
+    width:72px;
+    height:72px;
+    background: url(../images/spotify.png) no-repeat center center;
+    display:inline-block;
+}
+    .spotify:hover{
+        opacity:0.8;
+    }
+
 /* 8. Skills */
 .skills {
 }
