--- a/partials/cds/2010.html
+++ b/partials/cds/2010.html
@@ -92,3 +92,9 @@
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <a href="http://open.spotify.com/user/gregduncan/playlist/2kCrd7rty66TDrxAZMjhda" target="_blank" class="spotify" title="Open in Spotify"></a>
+    </div>
+</div>
