refactor: update contact form to use Formspree API; enhance form validation and submission states

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -305,7 +305,8 @@ body {
 .sidebar ul > li {
   margin-bottom: 15px;
 }
-.sidebar input[type='text'] {
+.sidebar input[type='text'],
+.sidebar input[type='email'] {
   width: 230px;
   border: 3px solid #5f5050;
   border-radius: 3px;
